--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-sketcher",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "A Vue 3 component for drawing and sketching on an HTML canvas",
     "main": "dist/index.js",
     "module": "dist/index.mjs",
@@ -40,5 +40,10 @@
         "typescript": "^5.7.0",
         "vite": "^6.0",
         "vue-tsc": "^2.2"
-    }
+    },
+    "files": [
+        "dist",
+        "README.md",
+        "LICENSE"
+    ]
 }
