--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview",
+        "build-demo": "vite build --mode demo",
+        "preview-demo": "vite preview --outDir demo/dist",
         "lint": "eslint \"**/*.{ts,vue}\"",
         "lint:fix": "eslint \"**/*.{ts,vue}\" --fix",
         "format": "prettier --write ."
